@@ -4,6 +4,7 @@
         - required for 4k stream automatic selection
 [add] add Settings - MPEG-DASH - Include VP9.2
         - includes HDR content in the manifest
+[fix] fix playback of Purchases
 
 6.4.0
 [add] 4K videos with InputStream Adaptive >= v2.3.14
